# sedikitacakv3-api

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
migrations/2024-06-30-152821_create_posts/: up.sql
migrations/2024-07-05-181635_create_user/: up.sql
migrations/2024-07-07-144531_create_posts/: up.sql
migrations/2024-07-12-162023_create_post_categories/: up.sql
migrations/2024-07-12-173348_change_to_category_id/: down.sql  up.sql
migrations/2024-07-14-034229_create_projects/: up.sql
migrations/2024-07-14-073515_create_techs/: down.sql  up.sql
migrations/2024-07-14-161802_create_roles/: down.sql  up.sql
migrations/2024-07-17-015811_create_hobbies/: down.sql  up.sql
migrations/2024-07-19-170330_create_settings/: up.sql
migrations/2024-07-20-160209_update_post_category/: down.sql  up.sql
migrations/2024-07-22-162757_adding_role_to_user/: down.sql  up.sql
migrations/2024-07-22-170522_create_projects_techs/: down.sql  up.sql
migrations/2024-07-28-085343_add_order_to_projects_hobbies/: down.sql  up.sql
migrations/2024-08-01-141345_create_contacts/: up.sql
src/: constants.rs  errors.rs  login.rs  main.rs  models.rs  post.rs  postcat.rs  response.rs  schema.rs  user.rs
src/controller/: contact.rs  hobby.rs  image.rs  login.rs  mod.rs  post.rs  postcat.rs  project.rs  role.rs  setting.rs  tech.rs  user.rs
src/middleware/: auth.rs
