[package]
name = "sedikitacakv3-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono", "r2d2"] }
dotenvy = "0.15.7"
actix-rt = "2.10.0"
env_logger = "0.11.3"
serde = { version = "1.0.203", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.9.1", features = ["serde", "v4"] }
r2d2 = "0.8"
bcrypt = "0.10.1"
