[package]
name = "sedikitacakv3-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.7.2"
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono", "r2d2"] }
dotenvy = "0.15.7"
actix-rt = "2.10.0"
env_logger = "0.11.3"
serde = { version = "1.0.203", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.9.1", features = ["serde", "v4"] }
r2d2 = "0.8"
bcrypt = "0.10.1"
serde_json = "1.0.120"
jsonwebtoken = "9.3.0"
futures = "0.3.30"
futures-util = "0.3"
actix-service = "2.0.2"
mime = "0.3.17"
sanitize-filename = "0.5.0"
actix-files = "0.6.6"
lettre = "0.11.7"
thiserror = "1.0.63"
